--- a/src/Components/navbar.css
+++ b/src/Components/navbar.css
@@ -1,166 +1,163 @@
 /* ============================         NAVBAR         ==========================*/
 
-.nav{
-    /* background-color: rgb(249, 150, 20);
+.nav {
+  /* background-color: rgb(249, 150, 20);
     border: 2px solid red; */
 }
 
 /* Estilos para el AppBar */
 .custom-app-bar {
-    width: 100% ;
-    max-width: 640px;
-    height: 62px;
-  }
-  
-  /* Estilos para el contenedor de botones */
-  .button-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-  }
-  
-  /* Estilos para los botones */
-  .custom-button {
-    text-transform: none !important;
-    border-radius: 9999px !important;
-    padding: 2px 16px !important;
-    height: calc(100% - 12px) !important;
-    color: white;
-    font-family: "Montserrat", sans-serif !important;
-  }
-  
-  .custom-button:hover {
-    background-color: var(--white) !important;
-    color:#023047 !important;
-  }
-  
-  /* Estilos para el contenedor principal */
-  .main-container {
-    display: flex;
-    justify-content: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    width: 60%;
-    /* width: 100%; */
-    background-color: transparent;
-    /* background-color: antiquewhite; */
-    transition: background-color 0.3s ease;
-  }
+  width: 100%;
+  max-width: 640px;
+  height: 62px;
+  background-color:#02304779 !important;
+}
 
-  
-  .main-container.scrolled {
-    background-color: rgba(255, 255, 255, 0.8);
+/* Estilos para el contenedor de botones */
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+/* Estilos para los botones */
+.custom-button {
+  text-transform: none !important;
+  border-radius: 9999px !important;
+  padding: 2px 16px !important;
+  height: calc(100% - 12px) !important;
+  color:  #ffffff !important;
+  font-family: "Montserrat", sans-serif !important;
+  letter-spacing: 1px !important;
+  /* font-weight: bolder !important; */
+}
+
+.custom-button:hover {
+  background-color: var(--white) !important;
+  color: #023047 !important;
+}
+
+/* Estilos para el contenedor principal */
+.main-container {
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 60%;
+  background-color: transparent;
+  transition: background-color 0.3s ease;
+}
+
+.main-container.scrolled {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  left: 20%;
+  z-index: 1;
+}
+/* Estilos responsivos */
+@media screen and (max-width: 600px) {
+  .main-container {
+    background-color: transparent;
+    padding-top: 0;
+    padding-bottom: 0;
+    width: 100% !important;
   }
-  
   .sticky {
     position: fixed;
     top: 0;
-    left: 20%;
+    left: 0;
     z-index: 1;
-  } 
-  /* Estilos responsivos */
-  @media screen and (max-width: 600px) {
-    .main-container {
-      background-color: transparent; 
-      /* background-color: greenyellow; */
-      padding-top: 0;
-      padding-bottom: 0;
-      width: 100% !important;
-    }
-    .sticky {
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 1;
-      } 
-  
-    .custom-app-bar {
-      max-width: 100%;
-      background-color: transparent !important;
-      box-shadow: none !important;
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-      height: 56px;
-    }
-  
-    .button-container {
-      display: none;
-    }
-  
-    .menu-icon {
-      display: block !important;
-    }
-  
-    .custom-toolbar {
-      padding: 0 !important;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-    }
-  
-    /* Ajuste del tamaño y posición del botón hamburguesa */
-    .menu-icon-button {
-      padding: 8px !important;
-      margin: 0 16px 0 0 !important;
-      color: black !important; /* Cambia el color del icono a negro */
-    }
-  
-    /* Eliminar el margen izquierdo adicional */
-    .MuiIconButton-edgeStart {
-      margin-left: 0 !important;
-    }
   }
-  
-  /* Ocultar el botón hamburguesa en pantallas más grandes que 600px */
-  @media (min-width: 601px) {
-    .menu-icon-button {
-      display: none !important;
-    }
+
+  .custom-app-bar {
+    max-width: 100%;
+    background-color: transparent !important;
+    box-shadow: none !important;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 56px;
   }
-  
-  /* Estilos responsivos para el Navbar */
-  @media screen and (max-width: 450px) {
-    .custom-app-bar {
-      width: 100% !important;
-      height: 56px !important;
-      border-radius: 0 !important;
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-    }
-  
-    .custom-toolbar {
-      padding: 0 !important;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-    }
-  
-    /* Ajuste del tamaño y posición del botón hamburguesa */
-    .menu-icon-button {
-      padding: 8px !important;
-      margin: 0 16px 0 0 !important;
-      color: black !important;
-    }
-  
-    /* Eliminar el margen izquierdo adicional */
-    .MuiIconButton-edgeStart {
-      margin-left: 0 !important;
-    }
-  }
-  
-  /* Estilo para ocultar el icono de menú en pantallas grandes */
-  .menu-icon {
+
+  .button-container {
     display: none;
   }
-  
- 
 
-  /* ============================       NAVBAR      ========================== */
+  .menu-icon {
+    display: block !important;
+  }
+
+  .custom-toolbar {
+    padding: 0 !important;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  /* Ajuste del tamaño y posición del botón hamburguesa */
+  .menu-icon-button {
+    padding: 8px !important;
+    margin: 0 16px 0 0 !important;
+    color: black !important; /* Cambia el color del icono a negro */
+  }
+
+  /* Eliminar el margen izquierdo adicional */
+  .MuiIconButton-edgeStart {
+    margin-left: 0 !important;
+  }
+}
+
+/* Ocultar el botón hamburguesa en pantallas más grandes que 600px */
+@media (min-width: 601px) {
+  .menu-icon-button {
+    display: none !important;
+  }
+}
+
+/* Estilos responsivos para el Navbar */
+@media screen and (max-width: 450px) {
+  .custom-app-bar {
+    width: 100% !important;
+    height: 56px !important;
+    border-radius: 0 !important;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  .custom-toolbar {
+    padding: 0 !important;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  /* Ajuste del tamaño y posición del botón hamburguesa */
+  .menu-icon-button {
+    padding: 8px !important;
+    margin: 0 16px 0 0 !important;
+    color: black !important;
+  }
+
+  /* Eliminar el margen izquierdo adicional */
+  .MuiIconButton-edgeStart {
+    margin-left: 0 !important;
+  }
+}
+
+/* Estilo para ocultar el icono de menú en pantallas grandes */
+.menu-icon {
+  display: none;
+}
+
+/* ============================       NAVBAR      ========================== */
