--- a/src/Components/views/Hero.css
+++ b/src/Components/views/Hero.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background: linear-gradient(to right, var(--color1), #fdfffd); 
-  transform: rotate(-3deg); 
+  background: linear-gradient(to right, var(--color1), #fdfffd);
+  transform: rotate(-3deg);
   height: 100vh;
   width: 90%;
   margin-left: 55px;
@@ -19,83 +19,76 @@
 }
 .mi_nombre {
   font-size: 3rem;
-  /* color: #efc955; */
-  color:var(--white);
+  color: var(--white);
   font-weight: 300;
   letter-spacing: 0.2rem;
   display: flex;
   flex-direction: column;
   gap: 15px;
-  /* background-color: aquamarine; */
 }
-.letters_s{
-    transform: rotate(3deg); 
-    margin-left: 2.5rem;
+.letters_s {
+  transform: rotate(3deg);
+  margin-left: 2.5rem;
 }
-.letters{
-  transform: rotate(3deg); 
+.letters {
+  transform: rotate(3deg);
   margin-left: 2rem;
 }
+
+.skill {
+  font-size: 1.5rem;
+  color: var(--color1);
+  font-weight: 400;
+  padding: 1rem;
+}
 .hablity_agriculturalengineer {
-  font-size: 1.5rem; 
-  background: linear-gradient(to right,  var(--white), #023047); 
+  background: linear-gradient(to right, var(--white), #023047);
   margin-left: 1rem;
-  padding: 15px;
-  color:var(--color1);
   padding-left: 14vw;
   margin-right: -1vw;
   border-radius: 30px 2px;
-  font-weight: 400;
- 
 }
 
 .hablity_ai_agent_creator {
-  font-size: 1.5rem; 
-  margin: 20px 0; 
-  background: linear-gradient(to right,var(--white),  #c09614 ); 
+  margin: 20px 0;
+  background: linear-gradient(to right, var(--white), #c09614);
   margin-right: 2rem;
   margin-left: 3rem;
-  padding: 15px;
-  color:var(--color1);
   padding-left: 15vw;
-  border-radius:  2px 30px;
-  font-weight: 400;
+  border-radius: 2px 30px;
 }
 
-.hablity_web_developer{
-    margin-left: -1rem;
-  font-size: 1.5rem; 
-  background: linear-gradient(to right,  rgb(187, 249, 196), var(--color1)); 
-  padding: 15px;
-  color:var(--color1);
+.hablity_web_developer {
+  margin-left: -1rem;
+  background: linear-gradient(to right, rgb(187, 249, 196), var(--color1));
   padding-left: 24vw;
   border-radius: 30px 2px;
-  font-weight: 400;
 }
 
 /* Estilos responsivos */
 @media (width <= 768px) {
   .mi_nombre {
     padding-top: 4rem;
-    /* padding-bottom: 3rem; */
+    padding-bottom: 2rem;
   }
-  .hero{
-    /* padding-top: 30px; */
-   height: fit-content;
-   padding-bottom: 25vh;
+  .hero {
+    height: fit-content;
+    padding-bottom: 25vh;
   }
 
   .presentacion {
-    font-size: 2.5rem; /* Tamaño de letra para el nombre en móviles */
+    font-size: 2.5rem; 
+    padding-left: 30px;
   }
 
   .mi_nombre {
-    font-size: 2rem; /* Tamaño de letra para el nombre en móviles */
+    font-size: 2rem;
   }
 
-  .hablity_agriculturalengineer,
-  .hablity_ai_agent_creator,
-  .hablity_ {
-    font-size: 1.4rem; /* Tamaño de letra para habilidades en móviles */
+  .skill {
+    font-size: 1.2rem;
+    color: var(--color1);
+    font-weight: 400;
+    padding: 1rem;
   }
 }
