--- a/src/Components/views/Section_4.css
+++ b/src/Components/views/Section_4.css
@@ -9,7 +9,7 @@ h3 {
   color: var(--white) !important;
 }
 #projects {
-  margin-top: 12vw;  
+  margin-top: 12vw;
   background-color: var(--color1);
   background: linear-gradient(to bottom, var(--color1), var(--white));
 
@@ -27,21 +27,20 @@ h3 {
   transform: rotate(4deg);
 
   position: relative;
-  margin: 8rem 10px 8rem 10px; 
-  width: 100%; 
-  height: 600px; 
-  display: flex; 
-  justify-content: center; 
+  margin: 8rem 10px 8rem 10px;
+  width: 100%;
+  height: 600px;
+  display: flex;
+  justify-content: center;
 }
 
 .sliderDiv {
-  width: 15%; /* Añadido: ancho del 10% */
+  width: 15%; 
   opacity: 1;
-  height: 100%; /* Añadido: altura del 100% */
-  object-fit: cover; /* Añadido: ajuste de objeto */
-  /* border: 1px solid var(--color1); */
+  height: 100%;
+  object-fit: cover; 
   margin: 2px;
-  transition: all ease-in-out 0.5s; /* Añadido: transición de 0.5 segundos */
+  transition: all ease-in-out 0.5s; 
 }
 
 .sliderDiv img {
@@ -67,7 +66,7 @@ h3 {
     border-radius: 2px;
   }
   .sliderContainer {
-    margin-bottom: 120px;
+    /* margin-bottom: 120px; */
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -76,6 +75,11 @@ h3 {
   }
   .sliderDiv:hover {
     width: 82%;
+  }
+  h3 {
+    margin-left: calc(15vw - 20px);
+    transform: rotate(4deg);
+    font-size:34px !important ;
   }
 }
 
