--- a/src/Components/views/section_1.css
+++ b/src/Components/views/section_1.css
@@ -1,5 +1,5 @@
 .helloText {
-font-size: 20px !important;
+  font-size: 20px !important;
   line-height: 50px !important;
   /* letter-spacing: 1px; */
   color: var(--color1);
@@ -9,6 +9,7 @@ font-size: 20px !important;
 
 .personalPresentation {
   margin-top: 20rem;
+  margin-bottom: 20rem;
   position: relative;
   height: auto;
   display: flex;
@@ -35,7 +36,6 @@ font-size: 20px !important;
   visibility: hidden;
 }
 
-
 /*   --------------------      texto   \/   -------------------------------- */
 
 .scrollAnimation {
@@ -45,82 +45,89 @@ font-size: 20px !important;
   animation-timeline: --reveal;
 }
 
-
 .blur-in-expand {
-    animation: blur-in-expand 0.5s linear both;
+  animation: blur-in-expand 0.5s linear both;
+}
+@keyframes blur-in-expand {
+  0% {
+    transform: scale(0);
+    filter: blur(12px);
+    opacity: 0;
   }
-  @keyframes blur-in-expand {
-    0% {
-      transform: scale(0);
-      filter: blur(12px);
-      opacity: 0;
-    }
-    100% {
-      transform: scale(1);
-      filter: blur(0);
-      opacity: 1;
-    }
+  100% {
+    transform: scale(1);
+    filter: blur(0);
+    opacity: 1;
   }
-  
-  @keyframes show {
-    0% {
-      opacity: 0;
-      scale: 70%;
-    }
-    30% {
-      opacity: 1;
-    }
-    40%,
-    60%, 70% ,90%{
-      opacity: 1;
-      scale: 100%;
-    }
-    100% {
-      opacity: 0;
-      scale: 100%;
-    }
-  }
+}
 
+@keyframes show {
+  0% {
+    opacity: 0.8;
+    scale: 70%;
+  }
+  30% {
+    opacity: 1;
+    scale: 100%;
+  }
+  70% {
+    opacity: 1;
+    scale: 100%;
+  }
+  100% {
+    opacity: 0;
+    scale: 100%;
+  }
+}
+
+@media (width <= 768px) {
+  .personalPresentation {
+    margin-top: 9rem;
+    margin-bottom: 9rem;
+  }
+}
 @media (width <= 450px) {
   .scrollAnimation {
     animation-name: none;
+  }
+  .personalPresentation {
+    margin-top: 12rem;
+    margin-bottom: 6rem;
+    /* margin-left: 40px; */
   }
 }
 
 /*   --------------------      texto   /\   -------------------------------- */
 
 .letsTalk {
-    font-size: 40px !important;
-    /* font-weight: 400; */
-    letter-spacing: 1px;
-    margin-bottom: 3rem !important;
-    color: var(--color1);
-  }
-
+  font-size: 40px !important;
+  /* font-weight: 400; */
+  letter-spacing: 1px;
+  margin-bottom: 3rem !important;
+  color: var(--color1);
+}
 
 /*   --------------------      boton   \/   -------------------------------- */
 
+.email-button {
+  /* background: linear-gradient(to right, var(--color4), var(--color5));  */
+  background-color: var(--color1);
+  color: var(--white) !important;
+  padding: 14px 5vw;
+  text-decoration: none;
+  border-radius: 30px 2px;
+  display: inline;
+  margin-top: 5rem;
+  font-weight: bold;
+  transition: 0.3s ease;
+  /* border: var(--white) 1px solid; */
+}
 
-  .email-button {
-    /* background: linear-gradient(to right, var(--color4), var(--color5));  */
-    background-color: var(--color1);
-    color: var(--white) !important;
-    padding: 14px 5vw;
-    text-decoration: none;
-    border-radius: 30px 2px;
-    display: inline;
-    margin-top: 5rem;
-    font-weight: bold;
-    transition: 0.3s ease;
-    /* border: var(--white) 1px solid; */
-  }
+.email-button:hover {
+  transition: "background-color color 0.3s ease";
+  font-weight: bolder !important;
 
-  .email-button:hover {
-    transition: "background-color color 0.3s ease";
-    font-weight: bolder !important;
-  
-    background-color: var(--color1);
-    color: var(--white) !important;
-  }
+  background-color: var(--color1);
+  color: var(--white) !important;
+}
 /*   --------------------      boton   /\   -------------------------------- */
-  
