--- a/src/Components/views/section_3_1.css
+++ b/src/Components/views/section_3_1.css
@@ -76,12 +76,62 @@ p {
 .titles {
   rotate: 3deg;
 }
+/* ------------------          expertiseFlexItems    >>>      ------------------- */
 
 .expertiseFlexItems {
   box-sizing: border-box;
   width: 100%;
   height: fit-content;
 }
+
+.expertiseFlexItems p {
+    font-size: 18px !important;
+    line-height: 160%;
+    color: var(--color1);
+    letter-spacing: 1.5px;
+  }
+  .expertiseFlexItems li {
+    font-size: 13px !important;
+    line-height: 160%;
+    color: var(--color1);
+    letter-spacing: 1.1px;
+    padding: 20px;
+    border-radius: 1px 10px;
+    margin-top: 10px;
+    /* border: 1px solid var(--color1); */
+    background-color: #56687028;
+  }
+
+/* ------------------      <<<     expertiseFlexItems          --------------------- */
+
+/* ------------------          expertiseFlexItems_sub    >>>      ------------------- */
+
+.expertiseFlexItems_sub {
+    box-sizing: border-box;
+    width: 100%;
+    height: fit-content;
+    margin-left: 30px;
+  }
+  
+  .expertiseFlexItems_sub p {
+      font-size: 12px !important;
+      line-height: 100%;
+      color: var(--color1);
+      letter-spacing: 1.5px;
+    
+    }
+    .expertiseFlexItems_sub li {
+      font-size: 13px !important;
+      line-height: 170%;
+      color: var(--color1);
+      letter-spacing: 1px;
+      padding: 20px;
+      border-radius: 1px 10px;
+      margin-top: 10px;
+      background-color: #f1e26086;
+    }
+  
+  /* ------------------      <<<     expertiseFlexItems_sub          --------------------- */
 
 .h4_boton {
   display: flex;
@@ -102,29 +152,9 @@ p {
   font-weight: 300;
 }
 
-.content_sub_container {
-  /* margin: 70px 3vw; */
-}
 
-.expertiseFlexItems p {
-  font-size: 18px !important;
-  line-height: 140%;
-  color: var(--color1);
-  letter-spacing: 1.5px;
-  /* padding-top: 10px; */
-  /* padding-bottom: 10px; */
-}
-.expertiseFlexItems li {
-  font-size: 16px !important;
-  line-height: 140%;
-  color: var(--color1);
-  letter-spacing: 1.5px;
-  padding: 20px;
-  border-radius: 1px 10px;
-  margin-top: 10px;
-  /* border: 1px solid var(--color1); */
-  background-color: #56687028;
-}
+
+
 .impar {
   margin-top: 5vw;
 }
