--- a/src/index.css
+++ b/src/index.css
@@ -43,16 +43,16 @@
 
 /* Estilos base */
 body {
-  background-color: var(--white); /* Aplica el color de fondo a todo el body */
-  margin: 0;
-  /* margin-top: 50px; */
-  padding: 0;
+  width: 100% ;
+  margin: 0 ;
+  padding: 0 ;
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
-  overflow-x: hidden;
+  overflow-x: hidden ;
 }
-
+.padre{
+}
 h1 {
   color: rgb(18, 7, 7);
   font-weight: 300; /* Reducimos el grosor de la letra */
@@ -610,11 +610,6 @@ h5 {
   }
 }
 
-.slider-icons {
-  display: flex;
-  animation: slide 3s linear infinite;
-  /* width: 100%; */
-}
 
 .slider-icon {
   /* margin: 12px 30px; */
@@ -644,9 +639,6 @@ h5 {
 }
 
 /* Para hacer que el desplazamiento sea más suave */
-.slider-icons:hover {
-  animation-play-state: paused;
-}
 
 /* ============================    Section SLIDER    ========================== */
 
@@ -1386,10 +1378,7 @@ header {
   color: black;
 } */
 
-/* .iconsSection p {
-  margin: 0;
-  font-size: 20px;
-} */
+
 
 /*  -------------      fm      ------------------- */
 
